User-Core : Add UserCore application

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>user</module>
         <module>pet</module>
         <module>common</module>
+        <module>user-core</module>
     </modules>
 
     <dependencies>
@@ -114,6 +115,14 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.0.0-jre</version>
+        </dependency>
+
 
         <!-- For testing -->
         <dependency>
