--- a/pet/pom.xml
+++ b/pet/pom.xml
@@ -36,6 +36,34 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.0</version>
+				<configuration>
+					<from>
+						<image>openjdk:17-oracle</image>
+						<auth>
+							<username>${env.DOCKER_USER_NAME}</username>
+							<password>${env.DOCKER_USER_PASSWORD}</password>
+						</auth>
+					</from>
+					<to>
+						<image>bachdt1/${project.parent.artifactId}-${project.name}:${project.version}
+						</image>
+						<auth>
+							<username>${env.DOCKER_USER_NAME}</username>
+							<password>${env.DOCKER_USER_PASSWORD}</password>
+						</auth>
+					</to>
+					<container>
+						<ports>
+							<port>8092</port>
+						</ports>
+					</container>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
