--- a/user-core/src/test/resources/application.yml
+++ b/user-core/src/test/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     enabled: false
   dataSource:
     url: jdbc:h2:mem:testdb-user-core;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: root
-    password: root
+    username: test
+    password: test
     driver-class-name: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
