--- a/pet/pom.xml
+++ b/pet/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>petstore</groupId>
 		<artifactId>petstore-project</artifactId>
@@ -17,7 +16,9 @@
 	<properties>
 		<release.version>0.0.1-SNAPSHOT</release.version>
 
+		<!--suppress UnresolvedMavenProperty -->
 		<docker.username>${env.DOCKER_USER_NAME}</docker.username>
+		<!--suppress UnresolvedMavenProperty -->
 		<docker.password>${env.DOCKER_USER_PASSWORD}</docker.password>
 		<jib.version>3.4.0</jib.version>
 		<common.version>0.0.1-SNAPSHOT</common.version>
